code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__context_cell_baseline.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
assertion_line: 528
expression: output
---
 +----------------------------------------------------------------------------+
 |                                     Kay                                    |
 +----------------------------------------------------------------------------+
 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands


 ✶ 📁 /workspace
    feature/context-ui  🧠 medium

 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
 Read Only  (Shift+Tab change)                       Ctrl+G editor  •  API key
