code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__empty_chat.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
assertion_line: 494
expression: output
---
 +----------------------------------------------------------------------------+
 |                                     Kay                                    |
 +----------------------------------------------------------------------------+


 ★   /kay - perform a coding task (multiple agents)


 • Hello! How can I help you today?



 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands


 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
 Read Only  (Shift+Tab change)                       Ctrl+G editor  •  API key
